--- a/Shope/Views/Products/ProductHome.cshtml
+++ b/Shope/Views/Products/ProductHome.cshtml
@@ -7,6 +7,17 @@
 
 <head>
     <style>
+        h1 {
+            text-shadow: 5px 2px;
+            color: goldenrod;
+            font-size: 50px;
+        }
+
+        h2 {
+            text-shadow: 5px 2px;
+            color: darkgrey;
+            font-size: 50px;
+        }
 
         .twitter-share, .facebook-share {
             background: #fff;
@@ -32,6 +43,12 @@
 
 </head>
 <body>
+   
+    <br />
+    <br />
+    <marquee>
+        <p><h2>מלא מבצעים לרגל יום האישה אל תפסידו</h2></p>
+    </marquee>
     <div class="container text-center">
         <div class="row">
             <div class="col-sm-3 well">
@@ -145,7 +162,7 @@
 
         </div>
     </div>
-    
+
     <div class="jumbotron text-center" style="margin-bottom:0">
         <a href="~/Products/cart"><h4>העגלה שלי</h4></a>
         <a href="~/Customers/Register"><h4>הרשמה</h4></a>
