--- a/Shope/Views/Customers/Login.cshtml
+++ b/Shope/Views/Customers/Login.cshtml
@@ -93,7 +93,12 @@
                 a.twe:hover, a.twe:active {
                     background-color: blue;
                 }*/
-
+        s {
+            width:400px;
+            height:250px;
+            margin-top:10px;
+            float:left;
+        }
     </style>
 </head>
 <body>
@@ -132,8 +137,8 @@
             </div>
         </div>
     </div>
-    <div>
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/3bK7ZXlSw4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div id="s">
+        <iframe src="https://www.youtube.com/embed/3bK7ZXlSw4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 </body>
