--- a/Shope/Views/Products/cart.cshtml
+++ b/Shope/Views/Products/cart.cshtml
@@ -48,6 +48,9 @@ button:hover {
         background-color: cornflowerblue;
         color: white;
     }
+    body {
+        background-color: antiquewhite;
+    }
 </style>
 <body>
     @{ if (Global.Note == 1)
