--- a/Shope/Views/Customers/Register.cshtml
+++ b/Shope/Views/Customers/Register.cshtml
@@ -27,6 +27,9 @@
             color: white;
             padding: 15px;
         }
+        body {
+            background-color: antiquewhite;
+        }
 
     </style>
 </head>
