--- a/Shope/Views/Products/ProductHome.cshtml
+++ b/Shope/Views/Products/ProductHome.cshtml
@@ -39,6 +39,9 @@
             color:black;
             text-align: center;
         }
+        body {
+            background-color: antiquewhite;
+        }
     </style>
 
 </head>
