--- a/Shope/Views/Customers/Index.cshtml
+++ b/Shope/Views/Customers/Index.cshtml
@@ -95,7 +95,7 @@
 
 
 
-@section Styles  {
+@*@section Styles  {
     <style>
         #map {
             height: 400px;
@@ -146,4 +146,4 @@
 
 
     </script>
-}
+}*@
