--- a/Shope/Views/Products/Edit.cshtml
+++ b/Shope/Views/Products/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" min="1" and step="1" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Unit" class="control-label"></label>
-                <input asp-for="Unit" class="form-control" />
+                <input asp-for="Unit" min="1" and step="1" class="form-control" />
                 <span asp-validation-for="Unit" class="text-danger"></span>
             </div>
             <div class="form-group">
