--- a/Shope/Views/Customers/Login.cshtml
+++ b/Shope/Views/Customers/Login.cshtml
@@ -102,6 +102,8 @@
     </style>
 </head>
 <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script src="js/main.js"></script>
     <div class="container text-center">
         <div class="row">
             <div class="col-sm-3 well">
@@ -135,6 +137,154 @@
                     </form>
                 </div>
             </div>
+            <div class="col-sm-9">
+
+                <div id="map"></div>
+                <button id="showMe" class="btn">Use My Location</button>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2hqIrMlMtIUibJs7S_JJ_kt3DyuKWANs"></script>
+                <script src="js/main.js"></script>
+                <style>
+
+                  #map {
+                  height: 77vh;
+                  margin-bottom: 10px;
+                  display: none;
+                 }
+
+                 #locationList .card {
+                  padding: 10px;
+                 }
+
+                 #toast-container {
+                 top: 50%;
+                 bottom: unset;
+                 }
+
+                 .toast {
+                 background-color: rgba(0, 0, 0, 0.8);
+                  }
+
+                </style>
+                <script>
+                    const mapArea = document.getElementById('map');
+
+                    //This button will set everything into motion when clicked
+                    const actionBtn = document.getElementById('showMe');
+
+                    //This will display all the available addresses returned by Google's Geocode Api
+                    const locationsAvailable = document.getElementById('locationList');
+
+                    //Let's bring in our API_KEY
+                    const __KEY = 'YOUR_API_KEY';
+
+                    //Let's declare our Gmap and Gmarker variables that will hold the Map and Marker Objects later on
+                    let Gmap;
+                    let Gmarker;
+
+                    //Now we listen for a click event on our button
+                    actionBtn.addEventListener('click', e => {
+                        // hide the button
+                        actionBtn.style.display = "none";
+                        // call Materialize toast to update user
+                        M.toast({ html: 'fetching your current location', classes: 'rounded' });
+                        // get the user's position
+                        getLocation();
+                    });
+                </script>
+                <script>
+                    getLocation = () => {
+                        // check if user's browser supports Navigator.geolocation
+                        if (navigator.geolocation) {
+                            navigator.geolocation.getCurrentPosition(displayLocation, showError, options);
+                        } else {
+                            M.toast({ html: "Sorry, your browser does not support this feature... Please Update your Browser to enjoy it", classes: "rounded" });
+                        }
+                    }
+
+                </script>
+                <script>success, error, [options] *)</script>
+
+                <script>
+                    showError = (error) => {
+                        mapArea.style.display = "block"
+                        switch (error.code) {
+                            case error.PERMISSION_DENIED:
+                                mapArea.innerHTML = "You denied the request for your location."
+                                break;
+                            case error.POSITION_UNAVAILABLE:
+                                mapArea.innerHTML = "Your Location information is unavailable."
+                                break;
+                            case error.TIMEOUT:
+                                mapArea.innerHTML = "Your request timed out. Please try again"
+                                break;
+                            case error.UNKNOWN_ERROR:
+                                mapArea.innerHTML = "An unknown error occurred please try again after some time."
+                                break;
+                        }
+                    }
+                    //Makes sure location accuracy is high
+                    const options = {
+                        enableHighAccuracy: true
+                    }
+
+                </script>
+                <script>
+                    displayLocation = (position) => {
+                        const lat = position.coords.latitude;
+                        const lng = position.coords.longitude;
+                    }
+                </script>
+                <script>
+
+                    console.log(`Current Latitude is ${lat} and your longitude is ${lng}`);
+
+                </script>
+                <script>
+
+                    const latlng = { lat, lng }
+                    showMap(latlng);
+                    createMarker(latlng);
+                    mapArea.style.display = "block";
+
+                </script>
+                <script>
+
+                    displayLocation = (position) => {
+                        const lat = position.coords.latitude;
+                        const lng = position.coords.longitude;
+                        const latlng = { lat, lng }
+                        showMap(latlng);
+                        createMarker(latlng);
+                        mapArea.style.display = "block";
+                    }
+
+                </script>
+                <script>
+
+                    showMap = (latlng) => {
+                        let mapOptions = {
+                            center: latlng,
+                            zoom: 17
+                        };
+                        Gmap = new google.maps.Map(mapArea, mapOptions);
+                    }
+
+                </script>
+                <script>
+
+                    createMarker = (latlng) => {
+                        let markerOptions = {
+                            position: latlng,
+                            map: Gmap,
+                            animation: google.maps.Animation.BOUNCE,
+                            clickable: true
+                        };
+                        Gmarker = new google.maps.Marker(markerOptions);
+                    }
+                </script>
+            </div>
+
         </div>
     </div>
     <div id="s">
