--- a/Shope/Views/Shared/_Layout.cshtml
+++ b/Shope/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Shop</a>
+                @*<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Shop</a>*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -56,11 +56,12 @@
 
                             <li>@Html.ActionLink("Products", "Index", "Products")</li>
                             //<li>@Html.ActionLink("Orders", "Index", "Orders")</li>
-                            <li>@Html.ActionLink("customers", "Index", "customers")</li>
-                            <li>@Html.ActionLink("orders", "OrdersByUsers", "OrderAndProducts")</li>
+                            <li>@Html.ActionLink("Customers", "Index", "customers")</li>
+                            <li>@Html.ActionLink("Orders", "OrdersByUsers", "OrderAndProducts")</li>
                             <li>@Html.ActionLink("User Sold Report(g)", "UserReports", "Orders")</li>
                             <li>@Html.ActionLink("Products Sold Report(g)", "ProductsReports", "Orders")</li>
                             <li>@Html.ActionLink("Cart", "cart", "Products")</li>
+                            <li>@Html.ActionLink("Addresses", "Index", "Addresses")</li>
                         }
                     }
 
